overflow fix

--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@ html {
 html,
 body {
   overflow: hidden;
+  position: fixed;
 }
 
 .page-wrapper {
